RESOLVED FIXED120434
AX: WebProcess at com.apple.WebCore: WebCore::AXObjectCache::rootObject + 27
https://bugs.webkit.org/show_bug.cgi?id=120434
Summary AX: WebProcess at com.apple.WebCore: WebCore::AXObjectCache::rootObject + 27
chris fleizach
Reported 2013-08-28 12:15:48 PDT
Crash Crashed Thread: 0 Dispatch queue: com.apple.main-thread Exception Type: EXC_BAD_ACCESS (SIGSEGV) Exception Codes: KERN_INVALID_ADDRESS at 0x0000000000000000 VM Regions Near 0: --> __TEXT 0000000101aa8000-0000000101aa9000 [ 4K] r-x/rwx SM=COW /Applications/WebKit.app/Contents/Frameworks/10.8/WebKit2.framework/WebProcess.app/Contents/MacOS/WebProcess * BACKTRACE ('>' indicates stack frame used for CrashTracer aggregation) > 1 com.apple.WebCore 0x10c34f49b WebCore::AXObjectCache::rootObject() + 0x1b 2 com.apple.WebKit2 0x10bbe1754 -[WKAccessibilityWebPageObject accessibilityRootObjectWrapper] + 0x70 3 com.apple.WebKit2 0x10bbe1d46 -[WKAccessibilityWebPageObject accessibilityHitTest:] + 0x15c 4 com.apple.AppKit 0x7fff96b80f46 CopyElementAtPosition + 0x23a 5 com.apple.HIServices 0x7fff93f12665 _AXXMIGCopyElementAtPosition + 0xcf 6 com.apple.HIServices 0x7fff93f18d53 _XCopyElementAtPosition + 0x109 7 com.apple.HIServices 0x7fff93ef6f4e mshMIGPerform + 0x1bb
Attachments
patch (1.33 KB, patch)
2013-08-28 12:17 PDT, chris fleizach
no flags
chris fleizach
Comment 1 2013-08-28 12:16:03 PDT
chris fleizach
Comment 2 2013-08-28 12:17:58 PDT
WebKit Commit Bot
Comment 3 2013-08-28 19:32:39 PDT
Comment on attachment 209915 [details] patch Clearing flags on attachment: 209915 Committed r154802: <http://trac.webkit.org/changeset/154802>
WebKit Commit Bot
Comment 4 2013-08-28 19:32:41 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.