AX: WebProcess at com.apple.WebCore: WebCore::AXObjectCache::rootObject + 27 https://bugs.webkit.org/show_bug.cgi?id=120434

Reviewed by Darin Adler.

Crash logs indicate that there's a null pointer access in rootObject. That seems like it could only
happen in Document was null.

Unfortunately, there are no reproducible steps and no other information to construct a test case.

* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::rootObject):


Canonical link: https://commits.webkit.org/138432@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154802 268f45cc-cd09-0410-ab3c-d52691b4dbfc